--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               loading="lazy"
               class="content__picture_img"
               src="./images/truck.png"
-              alt="пиксельный рисунок автодома в фиолетовых цветах."
+              alt="Purple red van"
             />
             <span class="content__picture_tag">&lt;/HTML&gt;</span>
           </div>
@@ -124,9 +124,9 @@
           <div class="content__picture">
             <img
               loading="lazy"
-              class="content__picture_img bright_blur"
+              class="content__picture_img sepia"
               src="./images/truck.png"
-              alt="размытый рисунок автодома."
+              alt="Brown white van"
             />
             <span class="content__picture_tag">&lt;/HTML&gt;</span>
           </div>
@@ -194,9 +194,9 @@
           <div class="content__picture">
             <img
               loading="lazy"
-              class="content__picture_img invert"
+              class="content__picture_img saturate"
               src="./images/truck.png"
-              alt="рисунок автодома с инвертированными цветами."
+              alt="Red white van"
             />
             <span class="content__picture_tag">&lt;CSS&gt;</span>
           </div>
@@ -261,9 +261,9 @@
           <div class="content__picture">
             <img
               loading="lazy"
-              class="content__picture_img saturate"
+              class="content__picture_img variety"
               src="./images/truck.png"
-              alt="рисунок автодома в насыщенных цветах."
+              alt="Orange purple van"
             />
             <span class="content__picture_tag">&lt;desigions&gt;</span>
           </div>
@@ -328,9 +328,9 @@
           <div class="content__picture">
             <img
               loading="lazy"
-              class="content__picture_img sepia"
+              class="content__picture_img invert"
               src="./images/truck.png"
-              alt="рисунок автодома в цветах сепия."
+              alt="Blue green van"
             />
             <span class="content__picture_tag">care</span>
           </div>
@@ -397,9 +397,9 @@
           <div class="content__picture">
             <img
               loading="lazy"
-              class="content__picture_img hue-rotate"
+              class="content__picture_img sepia"
               src="./images/truck.png"
-              alt="рисунок автдома в изменённых цветах в красных тонах."
+              alt="Dark brown van"
             />
             <span class="content__picture_tag">&lt;support&gt;</span>
           </div>
@@ -462,9 +462,9 @@
           <div class="content__picture">
             <img
               loading="lazy"
-              class="content__picture_img grayscale"
+              class="content__picture_img bright_blur"
               src="./images/truck.png"
-              alt="пиксельный рисунок автодома в черно-белом варианте"
+              alt="Blur van"
             />
             <span class="content__picture_tag">&lt;lifes-style: none;&gt;</span>
           </div>
@@ -527,13 +527,13 @@
         </li>
 
         <li class="content__article card">
-          <h2 class="content__title">&quot;Сейчас я&nbsp;здесь&quot;</h2>
+          <h2 class="content__title">«Сейчас я&nbsp;здесь»</h2>
           <div class="content__picture">
             <img
               loading="lazy"
               class="content__picture_img variety"
               src="./images/truck.png"
-              alt="рисунок автодома в сиреневых цветах."
+              alt="Green red van"
             />
             <span class="content__picture_tag">&lt;experience&gt;</span>
           </div>
