fixed new iterations

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               loading="lazy"
               class="content__picture_img"
               src="./images/truck.png"
-              alt="Purple red van"
+              alt="Пурпурно-красный грузовик"
             />
             <span class="content__picture_tag">&lt;/HTML&gt;</span>
           </div>
@@ -133,7 +133,7 @@
               loading="lazy"
               class="content__picture_img sepia"
               src="./images/truck.png"
-              alt="Brown white van"
+              alt="Коричнево-белый грузовик"
             />
             <span class="content__picture_tag">&lt;/HTML&gt;</span>
           </div>
@@ -203,7 +203,7 @@
               loading="lazy"
               class="content__picture_img saturate"
               src="./images/truck.png"
-              alt="Red white van"
+              alt="Красно-белый грузовик"
             />
             <span class="content__picture_tag">&lt;CSS&gt;</span>
           </div>
@@ -270,7 +270,7 @@
               loading="lazy"
               class="content__picture_img variety"
               src="./images/truck.png"
-              alt="Orange purple van"
+              alt="Оранжево-пурпурный грузовик"
             />
             <span class="content__picture_tag">&lt;desigions&gt;</span>
           </div>
@@ -337,7 +337,7 @@
               loading="lazy"
               class="content__picture_img invert"
               src="./images/truck.png"
-              alt="Blue green van"
+              alt="Зелёно-голубой грузовик"
             />
             <span class="content__picture_tag">care</span>
           </div>
@@ -406,7 +406,7 @@
               loading="lazy"
               class="content__picture_img sepia"
               src="./images/truck.png"
-              alt="Dark brown van"
+              alt="Тёмно-коричневый грузовик"
             />
             <span class="content__picture_tag">&lt;support&gt;</span>
           </div>
@@ -471,7 +471,7 @@
               loading="lazy"
               class="content__picture_img bright_blur"
               src="./images/truck.png"
-              alt="Blur van"
+              alt="Заблюренный грузовик"
             />
             <span class="content__picture_tag">&lt;lifes-style: none;&gt;</span>
           </div>
@@ -540,7 +540,7 @@
               loading="lazy"
               class="content__picture_img variety"
               src="./images/truck.png"
-              alt="Green red van"
+              alt="Красно-зелёный грузовик"
             />
             <span class="content__picture_tag">&lt;experience&gt;</span>
           </div>
