--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
           <div class="content__picture">
             <img
               loading="lazy"
-              class="content__picture_img variety"
+              class="content__picture_img hue-rotate"
               src="./images/truck.png"
               alt="Красно-зелёный грузовик"
             />
