--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class="content__picture">
             <img
               loading="lazy"
-              class="content__picture_img sepia"
+              class="content__picture_img saturate"
               src="./images/truck.png"
               alt="Коричнево-белый грузовик"
             />
@@ -201,7 +201,7 @@
           <div class="content__picture">
             <img
               loading="lazy"
-              class="content__picture_img saturate"
+              class="content__picture_img saturate1"
               src="./images/truck.png"
               alt="Красно-белый грузовик"
             />
