class naming fixed

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <div class="content__picture">
             <img
               loading="lazy"
-              class="content__picture_img saturate1"
+              class="content__picture_img saturate-hard"
               src="./images/truck.png"
               alt="Красно-белый грузовик"
             />
